--- a/prow_mcp_server/Containerfile
+++ b/prow_mcp_server/Containerfile
@@ -6,5 +6,7 @@ COPY requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY mcp_server.py ./
+COPY drain.py ./
+COPY drain3.ini ./
 
 CMD ["python", "mcp_server.py"]
