add masking reg exp for draining logs (no impact on accuracy of analysis)

--- a/prow_mcp_server/drain3.ini
+++ b/prow_mcp_server/drain3.ini
@@ -12,7 +12,18 @@ masking = [
           {"regex_pattern":"((?<=[^A-Za-z0-9])|^)([\\-\\+]?\\d+)((?=[^A-Za-z0-9])|$)", "mask_with": "NUM"},
           {"regex_pattern":"(?<=executed cmd )(\".+?\")", "mask_with": "CMD"},
           {"regex_pattern":"/usr/bin/systemd-nspawn.*", "mask_with":"CMD"},
-          {"regex_pattern":"INFO: .*", "mask_with": "INFO"}
+          {"regex_pattern":"INFO: .*", "mask_with": "INFO"},
+          {"regex_pattern":"\\[\\d+mINFO\\[0m\\[(\\d{4}-\\d{2}-\\d{2}T\\d{2}:\\d{2}:\\d{2}Z)\\]", "mask_with": "INFO"},
+          {"regex_pattern":"time=\"(\\d{4}-\\d{2}-\\d{2}T\\d{2}:\\d{2}:\\d{2}Z)\" level=info", "mask_with": "INFO"},
+          {"regex_pattern":"([A-Z]{3} [a-zA-Z]{3} \\d{2} \\d{2}:\\d{2}:\\d{2} UTC [\\d]{4}) - ", "mask_with": "INFO"},
+          {"regex_pattern":"\\[([A-Z]{3} [a-zA-Z]{3} \\d{2} \\d{2}:\\d{2}:\\d{2} UTC [\\d]{4})\\] ", "mask_with": "INFO"},
+          {"regex_pattern":"I[\\d]{4}\\s\\d{2}:\\d{2}:\\d{2}\\.[\\d]{6}\\s+[\\d]{3}\\s+[a-z]*\\.go:[\\d]+\\]", "mask_with": "INFO"},
+          {"regex_pattern":"started: (.*)", "mask_with": "STARTING TEST"},
+          {"regex_pattern":"passed: (.*)", "mask_with": "PASSING TEST"},
+          {"regex_pattern":"skipped: (.*)", "mask_with": "SKIPPED TEST"},
+          {"regex_pattern":"skip \\[(.*)", "mask_with": "SKIPPED TEST"},
+          {"regex_pattern":"Ginkgo exit error 3: exit with code 3", "mask_with": "SKIPPED TEST"},
+          {"regex_pattern":"sha256:[\\da-f]{64}", "mask_with": "DIGEST"}
           ]
 mask_prefix = <:
 mask_suffix = :>
