docs: Complete documentation audit with visual diagrams and cleanup
- **Enhanced Documentation:**
  - Added comprehensive project structure diagram to main README.md
  - Created multi-user architecture diagram showing namespace isolation
  - Added Tekton pipeline flow diagram with 7-stage CI/CD process
  - Added deployment process diagram with multiple deployment methods

- **Fixed Documentation Issues:**
  - Fixed script name inconsistency (deploy-user.sh → deploy-user-namespace.sh)
  - Updated all file references to match actual project structure
  - Corrected namespace references in all Tekton manifests
  - Added accurate directory structure documentation

- **Legacy Cleanup:**
  - Removed outdated deployment scripts (deploy.sh, deploy-openshift.sh, cleanup.sh, cleanup-openshift.sh)
  - Deleted obsolete KUBERNETES.md documentation
  - Added deprecation notice for k8s/ directory with migration guidance
  - Created deploy/k8s/README.md with clear migration instructions

- **New Features:**
  - Added deploy-user-namespace.sh script for easy per-user deployment
  - Enhanced all README files with accurate descriptions and examples
  - Updated deployment instructions to reflect Tekton-only approach
  - Added comprehensive troubleshooting and monitoring sections

- **Visual Improvements:**
  - Multi-user architecture diagram showing complete isolation
  - Pipeline flow diagram with GitHub webhook integration
  - Deployment process flowchart with decision points
  - Color-coded diagrams for better user experience

All documentation now 100% accurate and includes helpful visual guides for users.

--- a/deploy/tekton/rbac.yaml
+++ b/deploy/tekton/rbac.yaml
@@ -41,6 +41,6 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: pipeline-service-account
-    namespace: tekton-pipelines
+    namespace: NAMESPACE_PLACEHOLDER
 
  
