--- a/deploy/tekton/user-examples.yaml
+++ b/deploy/tekton/user-examples.yaml
@@ -5,7 +5,7 @@ apiVersion: tekton.dev/v1beta1
 kind: PipelineRun
 metadata:
   generateName: alice-ci-analysis-pipeline-run-
-  namespace: tekton-pipelines
+  namespace: ci-analysis-alice
 spec:
   serviceAccountName: pipeline-service-account
   pipelineRef:
@@ -46,7 +46,7 @@ apiVersion: tekton.dev/v1beta1
 kind: PipelineRun
 metadata:
   generateName: bob-ci-analysis-pipeline-run-
-  namespace: tekton-pipelines
+  namespace: ci-analysis-bob
 spec:
   serviceAccountName: pipeline-service-account
   pipelineRef:
@@ -87,7 +87,7 @@ apiVersion: tekton.dev/v1beta1
 kind: PipelineRun
 metadata:
   generateName: qa-ci-analysis-pipeline-run-
-  namespace: tekton-pipelines
+  namespace: ci-analysis-qa
 spec:
   serviceAccountName: pipeline-service-account
   pipelineRef:
@@ -146,7 +146,7 @@ apiVersion: tekton.dev/v1beta1
 kind: PipelineRun
 metadata:
   generateName: ${USERNAME}-ci-analysis-pipeline-run-
-  namespace: tekton-pipelines
+  namespace: ci-analysis-${USERNAME}
 spec:
   serviceAccountName: pipeline-service-account
   pipelineRef:
@@ -183,5 +183,5 @@ spec:
 EOF
 
 echo "Pipeline run created successfully!"
-echo "Monitor with: tkn pipelinerun logs --last -f -n tekton-pipelines"
+echo "Monitor with: tkn pipelinerun logs --last -f -n ci-analysis-$USERNAME"
 echo "Check deployment: oc get pods -n ci-analysis-$USERNAME" 
