docs: Remove specific username references to make repo more generic
- **Updated README.md:**
  - Added Quick Start section for immediate usage
  - Updated clone instructions to use upstream repository
  - Added clear fork and contribute instructions
  - Removed specific username references (jeffdyoung, sherine from personal repos)
  - Cleaned up duplicate content at end of file

- **Updated Tekton YAML files:**
  - Changed default image-namespace from 'jdyoung' to 'your-registry-namespace'
  - Updated git-url examples to use upstream repository
  - Made all examples generic and user-agnostic

- **Benefits:**
  - Anyone can now clone and run the repository without modifications
  - Clear instructions for both direct usage and contribution
  - Generic examples that work for any user
  - Consistent references to upstream repository

Repository is now completely generic and ready for public use.

--- a/deploy/tekton/pipeline.yaml
+++ b/deploy/tekton/pipeline.yaml
@@ -27,7 +27,7 @@ spec:
     - name: image-namespace
       type: string
       description: Container image namespace
-      default: jdyoung
+      default: your-registry-namespace
     - name: image-name
       type: string
       description: Container image name
