--- a/deploy/tekton/pipeline-run.yaml
+++ b/deploy/tekton/pipeline-run.yaml
@@ -9,7 +9,7 @@ spec:
     name: ci-analysis-agent-pipeline
   params:
     - name: git-url
-      value: https://github.com/jeffdyoung/ci_analysis_agent.git
+      value: https://github.com/sherine-k/ci_analysis_agent.git
     - name: git-revision
       value: main
     - name: target-namespace
@@ -19,7 +19,7 @@ spec:
     - name: image-registry
       value: quay.io
     - name: image-namespace
-      value: jdyoung
+      value: your-registry-namespace
     - name: image-name
       value: ci-analysis-agent
     - name: image-tag
