--- a/deploy/tekton/triggers.yaml
+++ b/deploy/tekton/triggers.yaml
@@ -90,7 +90,7 @@ spec:
           - name: image-registry
             value: quay.io
           - name: image-namespace
-            value: jdyoung
+            value: your-registry-namespace
           - name: image-name
             value: ci-analysis-agent
           - name: image-tag
