--- a/deploy/tekton/pipeline.yaml
+++ b/deploy/tekton/pipeline.yaml
@@ -48,42 +48,37 @@ spec:
   tasks:
     - name: git-clone
       taskRef:
-        name: git-clone
-        kind: ClusterTask
-        apiVersion: tekton.dev/v1beta1
+        resolver: cluster
+        params:
+        - name: kind
+          value: task
+        - name: name
+          value: git-clone
+        - name: namespace
+          value: openshift-pipelines
       workspaces:
         - name: output
           workspace: shared-data
       params:
-        - name: url
+        - name: URL
           value: $(params.git-url)
-        - name: revision
+        - name: REVISION
           value: $(params.git-revision)
-        - name: deleteExisting
+        - name: DELETE_EXISTING
           value: "true"
-
-    - name: create-namespace
-      taskRef:
-        name: create-namespace
-        apiVersion: tekton.dev/v1beta1
-      runAfter:
-        - git-clone
-      workspaces:
-        - name: source
-          workspace: shared-data
-      params:
-        - name: target-namespace
-          value: $(params.target-namespace)
-        - name: user-prefix
-          value: $(params.user-prefix)
 
     - name: build-image
       taskRef:
-        name: buildah
-        kind: ClusterTask
-        apiVersion: tekton.dev/v1beta1
+        resolver: cluster
+        params:
+        - name: kind
+          value: task
+        - name: name
+          value: buildah
+        - name: namespace
+          value: openshift-pipelines
       runAfter:
-        - create-namespace
+        - git-clone
       workspaces:
         - name: source
           workspace: shared-data
@@ -96,8 +91,6 @@ spec:
           value: ./Dockerfile
         - name: CONTEXT
           value: .
-        - name: TLSVERIFY
-          value: "false"
 
     - name: deploy-ollama
       taskRef:
