--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-google-adk>=1.5.0
+google-adk>=1.8.0
 litellm>=1.74.0
 drain3>=0.9.0
 google-cloud-storage>=2.10.0
 python-dotenv>=1.0.0
 httpx>=0.24.0 
+mcp>=1.8.0
